# inverted-index-coursework

./: Cargo.toml  README.md
src/: lib.rs  rpc.rs  simple_inverted_index.rs
