[package]
name = "inverted-index-coursework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
clap = { version = "4.1.1", features = ["derive"] }
futures = "0.3.25"
lazy_static = "1.4.0"
plotters = "0.3.4"
rayon = "1.6.1"
regex = "1.7.0"
tarpc = { version = "0.31.0", features = ["full"] }
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"
walkdir = "2.3.2"
